--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,131 +1,123 @@
-cmake_minimum_required(VERSION 3.20)
+﻿cmake_minimum_required(VERSION 3.16)
 project(darkpool-detector VERSION 1.0.0 LANGUAGES CXX)
 
-# C++ Standard
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-# Options
-option(BUILD_TESTING "Enable unit tests" ON)
-option(BUILD_BENCHMARKS "Enable benchmarks" ON)
-option(ENABLE_SANITIZERS "Enable address and thread sanitizers" OFF)
-option(ENABLE_NATIVE_ARCH "Enable -march=native" ON)
-option(ENABLE_LTO "Enable link-time optimization" ON)
-option(ENABLE_ONNX "Enable ONNX Runtime support" ON)
-option(ENABLE_CUDA "Enable CUDA support" OFF)
+if(NOT CMAKE_BUILD_TYPE)
+    set(CMAKE_BUILD_TYPE Release)
+endif()
 
-# Compiler flags
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ffast-math -funroll-loops -finline-functions")
+option(BUILD_TESTING "Build tests" ON)
+option(BUILD_BENCHMARKS "Build benchmarks" ON)
+option(ENABLE_COVERAGE "Enable coverage reporting" OFF)
+option(ENABLE_LTO "Enable Link Time Optimization" OFF)
+option(ENABLE_MARCH_NATIVE "Enable -march=native" OFF)
 
-if(CMAKE_BUILD_TYPE STREQUAL "Release")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -DNDEBUG")
-    if(ENABLE_NATIVE_ARCH)
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native -mtune=native -mavx2 -mfma")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+
+if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+    add_compile_options(-Wall -Wextra -Wpedantic)
+    
+    if(CMAKE_BUILD_TYPE STREQUAL "Release")
+        add_compile_options(-O3 -DNDEBUG)
+        if(ENABLE_MARCH_NATIVE)
+            add_compile_options(-march=native)
+        else()
+            add_compile_options(-march=x86-64-v3)
+        endif()
+        add_compile_options(-mtune=generic)
+        add_compile_options(-ffast-math -fno-finite-math-only)
     endif()
+    
+    if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+        add_compile_options(-O0 -g3 -ggdb)
+    endif()
+    
     if(ENABLE_LTO)
-        set(CMAKE_INTERPROCEDURAL_OPTIMIZATION ON)
-    endif()
-elseif(CMAKE_BUILD_TYPE STREQUAL "Debug")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -g3")
-    if(ENABLE_SANITIZERS)
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address,undefined")
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-omit-frame-pointer")
+        add_compile_options(-flto)
+        add_link_options(-flto)
     endif()
 endif()
 
-# Find packages
 find_package(Threads REQUIRED)
-find_package(Boost 1.74 REQUIRED COMPONENTS system filesystem thread)
 find_package(yaml-cpp REQUIRED)
-find_package(prometheus-cpp CONFIG REQUIRED)
-find_package(PkgConfig REQUIRED)
-
-# Find TBB
 find_package(TBB REQUIRED)
+find_package(Boost 1.74 REQUIRED COMPONENTS system thread filesystem program_options)
+find_package(CURL REQUIRED)
+find_package(ZLIB REQUIRED)
 
-# Find NUMA
-find_package(PkgConfig REQUIRED)
-pkg_check_modules(NUMA REQUIRED numa)
-
-# Find ZeroMQ
-find_package(PkgConfig REQUIRED)
-pkg_check_modules(ZeroMQ REQUIRED libzmq)
-
-# Find WebSocketPP
-find_path(WEBSOCKETPP_INCLUDE_DIR websocketpp/config.hpp)
-
-# Find Google Test (for tests)
-if(BUILD_TESTING)
-    find_package(GTest REQUIRED)
+find_package(prometheus-cpp CONFIG QUIET)
+if(NOT prometheus-cpp_FOUND)
+    find_package(PkgConfig)
+    if(PkgConfig_FOUND)
+        pkg_check_modules(prometheus-cpp IMPORTED_TARGET prometheus-cpp)
+    endif()
 endif()
 
-# Find Google Benchmark (for benchmarks)
-if(BUILD_BENCHMARKS)
-    find_package(benchmark REQUIRED)
+find_package(GTest QUIET)
+find_package(benchmark QUIET)
+find_package(PkgConfig)
+
+if(PkgConfig_FOUND)
+    pkg_check_modules(WebSocketPP IMPORTED_TARGET websocketpp)
 endif()
 
-# Find ONNX Runtime
-if(ENABLE_ONNX)
-    find_package(onnxruntime REQUIRED)
+if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+    add_compile_options(-Wall -Wextra -Wpedantic -Werror)
+    add_compile_options(-Wno-unused-parameter -Wno-unused-variable)
+    
+    if(DEFINED SANITIZER)
+        if(SANITIZER STREQUAL "address")
+            add_compile_options(-fsanitize=address -fno-omit-frame-pointer -g)
+            add_link_options(-fsanitize=address)
+        elseif(SANITIZER STREQUAL "thread")
+            add_compile_options(-fsanitize=thread -g)
+            add_link_options(-fsanitize=thread)
+        elseif(SANITIZER STREQUAL "undefined")
+            add_compile_options(-fsanitize=undefined -g)
+            add_link_options(-fsanitize=undefined)
+        endif()
+    endif()
 endif()
 
-# Include directories
+include(CheckCXXCompilerFlag)
+check_cxx_compiler_flag("-mavx2" COMPILER_SUPPORTS_AVX2)
+check_cxx_compiler_flag("-mavx512f" COMPILER_SUPPORTS_AVX512)
+
+if(COMPILER_SUPPORTS_AVX2)
+    add_compile_definitions(HAS_AVX2)
+endif()
+if(COMPILER_SUPPORTS_AVX512)
+    add_compile_definitions(HAS_AVX512)
+endif()
+
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
-include_directories(${WEBSOCKETPP_INCLUDE_DIR})
 
-# Build subdirectories in dependency order
-add_subdirectory(src/utils)        # No dependencies
-add_subdirectory(src/protocols)    # Depends on utils
-add_subdirectory(src/core)         # Depends on utils, protocols  
-add_subdirectory(src/ml)           # Depends on utils
-add_subdirectory(src/strategies)   # Depends on utils, core
-add_subdirectory(src/visualization) # Depends on utils, core
+add_subdirectory(src)
 
-# Main executable
-add_executable(darkpool_detector src/main.cpp src/config.cpp)
-
-# Link libraries
-target_link_libraries(darkpool_detector
-    PRIVATE
-        darkpool_core
-        darkpool_ml
-        darkpool_protocols
-        darkpool_strategies
-        darkpool_visualization
-        darkpool_utils
-        yaml-cpp
-        ${ZeroMQ_LIBRARIES}
-        Threads::Threads
-)
-
-# Set properties
-set_target_properties(darkpool_detector PROPERTIES
-    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
-)
-
-# Tests
 if(BUILD_TESTING)
     enable_testing()
-    include(CTest)
     add_subdirectory(tests)
 endif()
 
-# Benchmarks
 if(BUILD_BENCHMARKS)
     add_subdirectory(benchmarks)
 endif()
 
-# Install
-install(TARGETS darkpool_detector DESTINATION bin)
-install(DIRECTORY include/ DESTINATION include)
-install(DIRECTORY config/ DESTINATION etc/darkpool)
+install(DIRECTORY include/darkpool DESTINATION include)
 
-# Package configuration
-include(CPack)
-set(CPACK_PACKAGE_NAME "darkpool-detector")
-set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
-set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Jane Street-level Dark Pool Detection System")
-set(CPACK_PACKAGE_VENDOR "DarkPool Technologies")
-set(CPACK_PACKAGING_INSTALL_PREFIX "/opt/darkpool")
+include(CMakePackageConfigHelpers)
+write_basic_package_version_file(
+    "${CMAKE_CURRENT_BINARY_DIR}/darkpool-config-version.cmake"
+    VERSION ${PROJECT_VERSION}
+    COMPATIBILITY AnyNewerVersion
+)
+
+install(FILES
+    "${CMAKE_CURRENT_BINARY_DIR}/darkpool-config-version.cmake"
+    DESTINATION lib/cmake/darkpool
+)
