--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -15,13 +15,7 @@ target_link_libraries(darkpool_utils PUBLIC
     ${CMAKE_THREAD_LIBS_INIT}
 )
 
-# Conditional compiler flags
-if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-    set(UTILS_COMPILER_FLAGS -finline-limit=2000)
-endif()
-
 target_compile_options(darkpool_utils PRIVATE
-    ${UTILS_COMPILER_FLAGS}
     -O3
     -march=native
     -mtune=native
@@ -33,25 +27,26 @@ target_compile_options(darkpool_utils PRIVATE
     -mfma
 )
 
+if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+    target_compile_options(darkpool_utils PRIVATE -finline-limit=2000)
+endif()
+
 target_compile_definitions(darkpool_utils PRIVATE
     CACHE_LINE_SIZE=64
     NUMA_AWARE_ALLOCATION=1
     USE_HUGE_PAGES=1
 )
 
-# Platform-specific optimizations
 if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
     target_compile_definitions(darkpool_utils PRIVATE
         LINUX_PERF_EVENTS=1
     )
 endif()
 
-# Enable LTO for release builds
 if(CMAKE_BUILD_TYPE STREQUAL "Release")
     set_property(TARGET darkpool_utils PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
 endif()
 
-# Export for other modules
 set_target_properties(darkpool_utils PROPERTIES
     POSITION_INDEPENDENT_CODE ON
 )
